[package]
name = "p2p-gossip"
version = "0.1.0"
edition = "2021"
description = "Simple p2p gossip application. Sends and receives pings to other members of the network periodically."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.1.0"
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.21"
rand = "0.8.5"
rcgen = "0.9.2"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
rustls-pemfile = "0.3.0"
tokio-rustls = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1.0"
tokio = { version = "1.17.0", features = ["net", "macros", "rt-multi-thread", "sync", "time", "io-util"]}
tokio-util = { version = "0.7.0", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.2"
