[package]
name = "udppm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.16"
simple_logger = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["net", "macros", "rt-multi-thread", "sync", "time"]}
